fix styles on mobile

--- a/src/components/AddGiftForm/index.css
+++ b/src/components/AddGiftForm/index.css
@@ -43,11 +43,12 @@
 .addForm {
     width: 90%;
     max-width: 900px;
-    margin: 100px auto;
+    margin: auto;
+    bottom: 10%;
+    top: 10%;
     position: fixed;
     background: white;
-    box-shadow: 0px 0px 8px #5c5c5c;
-    top: 0;
+    box-shadow: 0 0 8px #5c5c5c;
     left: 50%;
     transform: translateX(-50%);
     padding: 50px;
